[package]
name = "piaros"
version = "1.0.0"
edition = "2021"

[dependencies]
base64 = { version = "0.21.5", default-features = false }
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }
env_logger = { version = "0.10.1", default-features = false }
log = { version = "0.4.20" }
rustls = { version = "0.21.10", features = ["dangerous_configuration"] }
serde = { version = "1.0.188", default-features = false, features = ["derive"]  }
serde_json =  { version = "1.0.108", default-features = false }
ureq = { version = "2.8.0", features = ["json", "tls"] }

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
